# CMakeList.txt: проект CMake для Birthrt; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

# Добавьте источник в исполняемый файл этого проекта.
add_executable (Birthrt WIN32 "2DMOUSE.C" "2DMOUSE.H" "ABILITY.CPP" "ABILITY.HXX" "ACTIONS.CPP" 
"ACTIONS.HXX" "ACTNMENU.CPP" "ACTNMENU.HXX" "ADVENTUR.CPP" "ADVENTUR.HXX" "ADVPREP.CPP" 
"ADVPREP.HXX" "AIBTLCAP.CPP" "AIBTLCAP.HXX" "AIFIREBL.CPP" "AIFIREBL.HXX" "AIFNDTYP.HXX" 
"AIFOLCAP.HXX" "AIFOLID.HXX" "AIFOLPLY.CPP" "AIFOLPLY.HXX" "AIFOLPTH.CPP" "AIFOLPTH.HXX" 
"AIFTSEQ.CPP" "AIFTSEQ.HXX" "AIGARGL.CPP" "AIGARGL.HXX" "AIGUARD.HXX" "AIHARPY.CPP" 
"AIHARPY.HXX" "AIHHOUND.CPP" "AIHHOUND.HXX" "AIHORSE.CPP" "AIHORSE.HXX" "AILEADER.CPP" 
"AILEADER.HXX" "AIPATHPT.HXX" "AIPONG.CPP" "AIPONG.HXX" 
"AIPTHLDR.HXX" "AISPECTR.CPP" "AISPECTR.HXX" "AISPIDER.CPP" "AISPIDER.HXX" "AISTUN.CPP" 
"AISTUN.HXX" "AIWYVERN.CPP" "AIWYVERN.HXX" "ALIGNMNT.CPP" 
"ALIGNMNT.HXX" "AMBIENCE.INC" "ANIM.CPP" "ANIM.H" "APPEAR.CPP" "APPEAR.HXX" "ARMOR.CPP"
"ARMOR.HXX" "ARROW.H" "ASSERT.C" "ATHING.CPP" "ATHING.HXX" "AVA.CPP" "AVA.HXX" "AVATAR.CPP" 
"AVATAR.HXX" "BATTLE.CPP" "BATTLE.HXX" "BATTLEUI.CPP" "BATTLEUI.HXX" "BLOCKM.C" 
"BLOOD.CPP" "BLOOD.HXX" "BLOODEFF.CPP" "BLOODREQ.CPP" "BLOODREQ.HXX" 
"BUMP.C" "BUMP.H" "CAMERA.C" "CAMERA.H" "CAMRDATA.HXX" "CHARED.CPP" 
"CHARED.HXX" "CHAREDIN.CPP" "CHAREDIN.HXX" "CHAREDSY.H" "CHARISMA.CPP" "CHARISMA.HXX" 
"CHARSEL.CPP" "CHARSEL.HXX" "CLIP.C" "COLORS.H" "COMBATUI.CPP" "COMBATUI.HXX" 
"COMBCAMR.CPP" "COMBCAMR.HXX" "COMBCNTL.CPP" "COMBCNTL.HXX" "COMBDATA.CPP" "COMBDATA.HXX" 
"COMBOPTS.CPP" "COMBOPTS.HXX" "COMBTARG.CPP" "COMBTARG.HXX" "CONSTITN.CPP" "CONSTITN.HXX" 
"CONTEXT.HXX" "CONVERT.C" "CTHING.HXX" "CUE.C" "DEBUG.C" 
"DEBUG.H" "DEMOFLIC.CPP" "DESCRIBE.CPP" "DESCRIBE.HXX" "DEU.H" "DEXTERIT.CPP" "DEXTERIT.HXX" 
"DICE.C" "DICE.H" "DOORS.C" "DOORS.H" "DOSHELP.CPP" 
"DOSHELP.HXX" "DYNAMTEX.C" "DYNAMTEX.H" "EDIT.C" "EDIT.H" "EFFSEPAR.HXX" 
"ENGINE.H" "ENGINT.H" "EXPERIEN.CPP" "EXPERIEN.HXX" "EXPLEVEL.CPP" "EXPLEVEL.HXX" "EXTENT.C" 
"FILENAME.HXX" "FILEUTIL.C" "FILEUTIL.H" "FINDFILE.CPP" "FINDFILE.HXX" "FLICPLAY.CPP" 
"FLICPLAY.HXX" "FOPEN.C" "FOPEN.H" "GAME.CPP" "GAME.H" "GAMECAMR.HXX" "GAMEKEY.CPP" 
"GAMEKEY.HXX" "GAMEMAP.CPP" "GAMEMAP.HXX" "GAMEMENU.H" "GAMEOPT.CPP" "GAMESTR.H" "GAMETYPE.CPP" 
"GAMETYPE.HXX" "GETFILE.CPP" "GETFILE.HXX" "GMENUENM.H" "HANDLE.HXX" "HMGR.CPP" 
"HMGR.HXX" "INFOBOX.CPP" "INFOBOX.HXX" "INTELLI.CPP" "INTELLI.HXX" "INVNBUTS.HXX" 
"INVNGUI.CPP" "INVNGUI.HXX" "INVNTORY.CPP" "INVNTORY.HXX" "ITEMEFF.CPP" 
"ITEMEQP.CPP" "ITEMEQP.HXX" "ITEMTYPE.CPP" "ITEMTYPE.HXX" "ITEMUTIL.CPP" 
"ITEMUTIL.HXX" "LEVEL.C" "LIGHT.H" "LISTBOX.CPP" "LISTBOX.HXX" 
"LOADSAVE.CPP" "LOADSAVE.HXX" "MACHINE.H" "MACHINT.H" "MAGIC.C" "MAGIC.H" "MAIN.CPP" 
"MAIN.HXX" "MAP.C" "MAP.H" "MAPAI.CPP" "MAPAI.HXX" 
"MAPAITBL.CPP" "MAPEFF.CPP" "MAPICON.HXX" "MARGIN.CPP" "MARGIN.HXX" 
"MEMMANAG.CPP" "MEMMANAG.HXX" "MENU.C" "MENU.H" "MENUDATA.H" "MENUEFF.CPP" "MENUPROT.H" 
"MULTIMAP.CPP" "MULTIMAP.HXX" "MULTIUI.CPP" "MULTIUI.HXX" 
"PANEL.C" "PANEL.H" "PANORAMA.CPP" "PANORAMA.HXX" "PARCH.CPP" "PARCH.HXX" "PLACES.CPP" 
"PLACES.HXX" "PLAYCLAS.CPP" "PLAYCLAS.HXX" "PLAYER.CPP" "PLAYER.HXX" "PLAYHIT.CPP" "PLAYHIT.HXX" 
"PLAYID.CPP" "PLAYID.HXX" "PLAYRACE.CPP" "PLAYRACE.HXX" "PLAYSTAT.CPP" "PLAYSTAT.HXX" "POINT.C" 
"POISON.HXX" "PRACTICE.CPP" "PROTO.H" "PROVDATA.CPP" "PROVDATA.HXX" "PROVTAX.C" "PROVTAX.H" 
"RANDOM.C" "RANDOM.H" "REALM.CPP" "REALM.HXX" "REDBOOK.C" "REDBOOK.H" "REGEN.CPP" 
"REGEN.HXX" "REGENTS.CPP" "REGENTS.HXX" "REGIONS.C" "REGIONS.H" "REGRELIC.CPP" 
"REGRELIC.HXX" "REGUTIL.CPP" "REJECT.C" "RELICEFF.CPP" "RENDER.C" 
"REPORT.CPP" "REPORT.HXX" "REQUEST.C" "REQUEST.H" "RESMANAG.CPP" "RESMANAG.HXX" "RESOURCE.H" 
"RESURECT.HXX" "RLMSPELL.CPP" "RLMSPELL.HXX" "SCAN.C" "SCENE.CPP" 
"SCENE.HXX" "SCNAI.CPP" "SCNAI.HXX" "SCNCAMR.CPP" "SCNCAMR.HXX" "SCNDEMO.HXX" "SCNDLGS.HXX" 
"SCNEXIT.HXX" "SCNINFO.HXX" "SCNKEY.CPP" "SCNKEY.HXX" "SCNMAP.CPP" "SCNMAP.HXX" "SCNMGR.CPP" 
"SCNMGR.HXX" "SCNMUSIC.HXX" "SCNNOTES.HXX" "SCNPLACE.HXX" "SCNSCTOR.HXX" "SCNVER.CPP" "SCNVER.HXX" 
"SECTORS.C" "SECTORS.H" "SINCOS.H" "SLFRDEMO.CPP" "SLFRDEMO.HXX" 
"SNDDATA.H" "SNDVOX.CPP" "SNDVOX.HXX" "SOUND.CPP" "SOUND.HXX" "SOUNDFX.HXX" "SPANS.C" 
"SPECIAL.H" "SPELL.CPP" "SPELL.HXX" "SPELLEFF.CPP" "SPELLPRO.CPP" "SPELLPRO.HXX" 
"STATSMOD.HXX" "STRENGTH.CPP" "STRENGTH.HXX" "strenum.h" "STRINT.H" "STRMAKE.CPP" "STRMGR.C" 
"STRMGR.H" "SYSINT.H" "SYSTEM.C" "SYSTEM.H" "TASK.C" "TASK.H" 
"TEXTURES.C" "THINGS.C" "THINGS.H" "THINGTYP.H" "TIMER.C" "TMSGBOX.CPP" "TMSGBOX.HXX" 
"TOTALS.H" "TUTOR.CPP" "TUTOR.HXX" "TUTRMENU.CPP" "TUTRMENU.HXX" "TYPEDEFS.H" "UNITS.CPP" 
"UNITS.HXX" "VDPMI.C" "VECTOR.HXX" "VERSION.CPP" "VERSION.HXX" "WADTHING.H" "WEAPON.CPP" 
"WEAPON.HXX" "WISDOM.CPP" "WISDOM.HXX" "WINSYS/AFXRES.H" "WINSYS/CRC.CPP" 
"WINSYS/DDRAW.CPP" "WINSYS/DDRAWPRO.H" 
"WINSYS/DPLAYUTS.H" "WINSYS/FILEXFER.CPP" "WINSYS/FILEXFER.HXX" "WINSYS/GMULPLAY.CPP" 
"WINSYS/GMULPLAY.HXX" "WINSYS/GOTOURL.CPP" "WINSYS/GOTOURL.H" "WINSYS/INETPROC.INC" "WINSYS/KEYINT.C" 
"WINSYS/MACHINE.C" "WINSYS/MCIUTIL.C" "WINSYS/MCIUTIL.H" "WINSYS/MDS.H" 
"WINSYS/MDSUTIL.C" "WINSYS/MESSQUE.CPP" "WINSYS/MESSQUE.HXX" "WINSYS/MONO.CPP" "WINSYS/MONO.H" 
"WINSYS/MONO_C.CPP" "WINSYS/MONO_C.H" "WINSYS/MOUSE.C" "WINSYS/MULPLAY.CPP" 
"WINSYS/MULPLAY.HXX" "WINSYS/MUSIUTIL.C" "WINSYS/MUSIUTIL.H" "WINSYS/MUSIUTIS.H" "WINSYS/PNETMOD.CPP" 
"WINSYS/PNETMOD.HXX" "WINSYS/PNETTYPE.H" "WINSYS/REGISTRS.H" "WINSYS/REGISTRY.C" "WINSYS/REGISTRY.H" 
"WINSYS/SIERRANW.H" "WINSYS/SNDUTIL.C" "WINSYS/SNDUTIL.H" "WINSYS/SNDUTILS.H" "WINSYS/SNTYPES.H" 
"WINSYS/SNWVALID.H" "WINSYS/STATUS.C" "WINSYS/STATUS.H" 
"WINSYS/SWINUTIL.C" "WINSYS/SWINUTIL.H" "WINSYS/SYSGRAPH.CPP" 
"WINSYS/UTIL.C" "WINSYS/WAVE.C" "WINSYS/WAVE.H" "WINSYS/WINRES.H")
include_directories("C:\\Program Files (x86)\\Microsoft DirectX 9.0 SDK (April 2005)\\Include"
"C:\\Program Files (x86)\\Windows Kits\\10\\Include\\10.0.19041.0\\um")
target_link_libraries(Birthrt "C:\\Program Files (x86)\\Microsoft DirectX 9.0 SDK (April 2005)\\Lib\\x64\\ddraw.lib"
"C:\\Program Files (x86)\\Windows Kits\\10\\Lib\\10.0.19041.0\\um\\x64\\winmm.lib")